<resources>
    <string name="app_name">开眼</string>

    //导航栏
    <string name="nav_home">首页</string>
    <string name="nav_community">社区</string>
    <string name="nav_notice">通知</string>
    <string name="nav_mine">我的</string>

    <string name="guide_login_tips">点击登录即可评论及发布内容</string>
    <string name="favorites">收藏</string>
    <string name="cache">缓存</string>
    <string name="my_follow">我的关注</string>
    <string name="watch_record">观看记录</string>
    <string name="notification_toggle">通知开关</string>
    <string name="my_badge">我的徽章</string>
    <string name="feedback">意见反馈</string>
    <string name="want_contribute">我要投稿</string>
    <string name="version_show">Version %1$s</string>

    <string name="slogan">- Your contribution is highly appreciated! -</string>
    <string name="slogan_two">Daily appetizersfor your eyes. Bon eyepétit.</string>
    <string name="slogan_description_two">每日精选视频推介，让你大开眼界。</string>
</resources>
