<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivMore"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="end"
        android:padding="14dp"
        android:src="@drawable/ic_more_black_19dp" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivAvatar"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_logo_black_76dp"
        app:civ_border_color="#cdcdcd"
        app:civ_border_width="1dp"
        app:civ_circle_background_color="@color/gray" />

    <TextView
        android:id="@+id/tvLoginTips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="18dp"
        android:text="@string/guide_login_tips"
        android:textSize="12sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/viewVerticalLine"
            android:layout_width="1px"
            android:layout_height="26dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:background="#adadad"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvFavorites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_favorite_border_black_20dp"
            android:drawableLeft="@drawable/ic_favorite_border_black_20dp"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:text="@string/favorites"
            android:textColor="@color/colorTextSecondary"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/viewVerticalLine"
            app:layout_constraintEnd_toStartOf="@+id/viewVerticalLine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/viewVerticalLine" />

        <TextView
            android:id="@+id/tvCache"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_cache_black_16dp"
            android:drawableLeft="@drawable/ic_cache_black_16dp"
            android:drawablePadding="8dp"
            android:gravity="center_horizontal"
            android:text="@string/cache"
            android:textColor="@color/colorTextSecondary"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/viewVerticalLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/viewVerticalLine"
            app:layout_constraintTop_toTopOf="@+id/viewVerticalLine" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/viewHorizontalLine"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="19dp"
        android:background="#adadad" />

    <LinearLayout
        android:id="@+id/llScrollViewContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvFollow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:paddingStart="13dp"
            android:paddingEnd="13dp"
            android:text="@string/my_follow"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvWatchRecord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:text="@string/watch_record"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvNotificationToggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:text="@string/notification_toggle"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvMyBadge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:text="@string/my_badge"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvFeedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:text="@string/feedback"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvContribute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:text="@string/want_contribute"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvVersionNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:layout_marginBottom="15dp"
            android:background="?android:attr/selectableItemBackground"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="Version 6.3.0"
            android:textColor="#adadad"
            android:textSize="11sp" />
    </LinearLayout>

</LinearLayout>